css/mapping_victory.css
html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    color: #242119;
    font-family: "new-order", sans-serif;
    font-weight: 400;
    font-style: normal;
}
body.internal { background-color: #ecede4; }
body.boilerplate { background-color: #e9ddc6; }

header {
    background-color: #e9ddc6;
    overflow: hidden;
    border-bottom: solid 36px #242119;
}
header.boilerplate {
    border: none;
}

header.internal {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #ecede4;
    border-bottom: none;
    padding: 30px 100px;
}
header.internal h1 {
    font-family: "dunbar-tall", sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    font-style: normal;
    font-size: 20px;
    width: 125px;
    text-align: left;
    margin: 0;
    text-decoration: none;
}
a.logo { text-decoration: none; }

#logo-container {
    width: 100%;
    max-width: min(70vw, 970px);
}
#logo-container a { width: 100%; }
#logo-container.gallery-page {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 20px auto;
}

.header-links {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 150px;
}

header.boilerplate .header-links {
    margin-left: auto;
    padding: 10px 10px 0 0;
    text-align: right;
}

.boilerplate-page-section {
    display: flex;
    flex-direction: row;
    justify-content: start;
    margin-top: 30px;
    max-width: min(70vw, 975px);
    margin-left: auto;
    margin-right: auto;
}
.page-section-header {
    display: flex;
    flex-direction: row;
    justify-content: end;
    writing-mode: sideways-lr;
    color: #242119;
    font-family: "dunbar-tall", sans-serif;
    font-weight: 700;
    font-style: normal;
    font-size: 25px;
    text-transform: uppercase;
    border-right: solid 10px #242119;
    padding: 0 10px 25px 0;
    width: 30px;
    height: fit-content;
}
.page-section-header.no-border {
    border-right: none;
    padding-right: 20px;
}
.page-section-content {
    padding-left: 15px;
    width: 65vw;
}
dl { margin-top: 0; }
dl dt { font-weight: bold; }
dl dd { margin-bottom: 10px; }

.logo-h1 {
    color: #242119;
    font-family: "dunbar-tall", sans-serif;
    font-weight: 700;
    font-style: normal;
}

.gallery-page .header-links {
    padding-top: 10px;
    padding-right: 10px;
    margin-left: auto;
    width: 150px;
}
.header-links a {
    color: #242119;
    text-align: center;
    font-family: "new-order", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 18px;
    text-decoration: none;
}

h1 {
    color: #242119;
    font-family: "dunbar-tall", sans-serif;
    font-weight: 700;
    font-style: normal;
}

.toggle-switch-container {
    text-align: right;
    padding: 0 10px 10px 0;
}
.toggle-switch {
    display: inline-flex;
    border: solid 2px #242119;
    border-radius: 20px;
    margin-left: auto;
}
.toggle-switch a {
    color: #242119;
    font-family: "new-order", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 18px;
    text-decoration: none;
    padding: 5px 10px;
}
.toggle-switch .active {
    background-color: #ecede4;
    border-radius: 20px;
}
.toggle-switch .active.left { border-right: solid 2px #242119; }
.toggle-switch .active.right { border-left: solid 2px #242119; }

.hidden { display: none!important; }

.filter-and-gallery-container {
    display: grid;
    grid-template-columns: minmax(0, 300px) 1fr;
    gap: 36px;
    background-color: #242119;
    min-height: 100%;
    border-bottom: solid 36px #242119;
}

#filter-div {
    background-color: #ecede4;
    padding: 20px;
}

#gallery-search-box {
    border: 2px solid #242119;
    border-radius: 25px;
    padding: 6px 15px;
    font-family: "new-order", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 20px;
    outline: none;
    width: 90%;
    margin-bottom: 30px;
}
#gallery-search-box::placeholder { color: #242119; }

#filter-indicator-div {
    margin-bottom: 20px;
}
.filter-indicator {
    color: #ecede4;
    border-radius: 20px;
    padding: 5px 12px;
    font-size: 16px;
    font-family: "new-order", sans-serif;
    font-weight: 400;
    font-style: normal;
    align-items: center;
    gap: 4px;
    display: inline-flex;
    justify-content: center;
}
.filter-indicator.yellow { background: #cba52a; }
.filter-indicator.red { background: #eb5534; }
.filter-indicator.blue { background: #4d82a1; }

.icon-button {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    color: inherit;
    display: inline-flex;
}
.filter-share-button {
    vertical-align: top;
}

.facet-list, .gallery {
    display: flex;
    flex-direction: row;
    margin-bottom: 30px;
}

.facet-list-header, .gallery-header {
    display: flex;
    flex-direction: row;
    gap: 8px;
    flex-wrap: nowrap;
    justify-content: end;
    writing-mode: sideways-lr;
    color: #242119;
    font-family: "new-order", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 25px;
    white-space: nowrap;
    padding-right: 10px;
}

.facet-list-content {
    color: #242119;
    max-height: 40vh;
    overflow-y: auto;
}

.facet-list-content a {
    color: #242119;
    text-decoration: none;
    font-family: "new-order", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    margin-bottom: 10px;
    margin-left: 20px;
    text-indent: -20px;
}

.count-badge {
    background-color: #242119;
    color: #ecede4;
    border-radius: 50%;
    padding: 5px;
    font-size: 10px;
    vertical-align: middle;
    display: inline-block;
    text-indent: 0;
    min-width: 12px;
    text-align: center;
}
.facet-list-header .count-badge, .gallery-header .count-badge {
    font-size: 16px;
    writing-mode: horizontal-tb;
}

#gallery-div {
    background-color: #e9ddc6;
    padding: 20px;
}
/* ... */

